Partial view added to Add view.

--- a/HouseRentingSystem/Views/Shared/Components/MainMenuComponent/Default.cshtml
+++ b/HouseRentingSystem/Views/Shared/Components/MainMenuComponent/Default.cshtml
@@ -1,6 +1,6 @@
 ﻿<ul class="navbar-nav flex-grow-1">
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="" asp-controller="House" asp-action="Index">All</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="House" asp-action="All">All</a>
     </li>
     @if (this.User?.Identity?.IsAuthenticated ?? false)
     {
